--- a/src/components/sections/Main/Main.module.scss
+++ b/src/components/sections/Main/Main.module.scss
@@ -9,8 +9,10 @@
 		gap: 30px;
 	}
 
-	.verticalFlexContainer * {
-		min-height: 0;
-		min-width: 0;
+	.verticalFlexContainer {
+		& * {
+			min-height: 0;
+			min-width: 0;
+		}
 	}
 }
