--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,7 +7,7 @@ $grey: #403b45;
 $white: #ffffff;
 
 //font-size
-$sm: 8px;
+$sm: 12px;
 $lg: 24px;
 $xlg: 48px;
 $max: 62px;
